[package]
name = "ssd1680"
version = "0.1.0"
authors = ["Konstantin Terekhov <c@kmbv.info>"]
description = "Driver for the SSD1680 e-Paper display (EPD) controller, for use with embedded-hal"
edition = "2021"

documentation = "https://docs.rs/ssd1680"
repository = "https://github.com/mbv/ssd1680"

readme = "README.md"
keywords = ["embedded-hal-driver", "epd", "epaper", "driver", "ssd1680"]
categories = ["embedded", "no-std"]

license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1.0.0"
embedded-graphics = { version = "0.8.1", optional = true }
display-interface = "0.5.0"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]

[profile.release]
lto = true
